--- a/.prettierrc
+++ b/.prettierrc
@@ -1,18 +1,18 @@
 {
-	"printWidth": 80,
-	"tabWidth": 2,
-	"singleQuote": true,
-	"trailingComma": false,
-	"arrowParens": false,
-	"semi": false,
-	"endOfLine": false,
-	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
-	"overrides": [
-		{
-			"files": "*.svelte",
-			"options": {
-				"parser": "svelte"
-			}
-		}
-	]
+  "printWidth": 80,
+  "tabWidth": 2,
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "arrowParens": "always",
+  "semi": false,
+  "endOfLine": "auto",
+  "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte"
+      }
+    }
+  ]
 }
